--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "less": "^3.12.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.5"
   },
@@ -20,6 +19,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
